<resources>
    <string name="app_name">ProjectParking</string>
    <string name="action_settings">Settings</string>
    <string name="main_logo">Main Logo</string>


    <string name="drop_in">Drop-In</string>
    <string name="reserver">Reserver</string>


    <string name="drop_in_welcome">Finnes det noen ledige plasser nå?</string>
    <string name="avail">ledig plass!</string>
    <string name="avail_plur">ledige plasser!</string>
    <string name="unavail">ledige plasser :(</string>
    <string name="spots_bread">Ledige plasser:</string>

    <string name="reserve_date_picker">Når ønsker du å reservere plass?</string>
    <string name="date_picker_text" >Velg en dato:</string>
    <string name="velg">Velg</string>
    <string name="avbryt">Avbryt</string>

    <string name="reservert" >Reservert </string>
    <string name="ledig">Ledig</string>

    <string name="bekreft">Bekreft</string>
    <string name="bekreft_bread">Bekreft at du virkelig ønsker å reservere denne plassen!</string>
    <string name="reserve">Reserver</string>
    <string name="bekreft_res">Bekreft Reservasjon</string>

    <string name="bsr_bread">Husk å fjerne din reservasjon om du ikke lengre ønsker å benytte deg av plassen.</string>
    <string name="bsr_profile">Du kan se dine reservasjoner på din profil.</string>



</resources>
