<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_picker_text"
        android:textColor="@color/textGray"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/std"
        android:layout_marginBottom="@dimen/std"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textGray"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/date_picker"
        android:calendarViewShown="false"
        android:spinnersShown="true"
        android:datePickerMode="spinner"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/transparentGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:theme="@style/materialDialog"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/avbryt"
            android:id="@+id/cancel_picker"
            />
        <com.google.android.material.button.MaterialButton
            android:theme="@style/materialDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/velg"
            android:id="@+id/select_picker"/>

    </LinearLayout>

</LinearLayout>